--- a/TODO.txt
+++ b/TODO.txt
@@ -25,6 +25,7 @@ Rocks
 
 Score display at top of screen
 Levels change settings and enemies and backgrounds
+sound effects - jump - enemies - explosion
 
 Starting menu 
 end game screen
